Fix text-align in editor

--- a/blocks/event/editor.scss
+++ b/blocks/event/editor.scss
@@ -6,6 +6,8 @@
 
 	// Fixes for overriding editor styles
 	.editor-styles-wrapper & {
+		text-align: left;
+
 		p {
 			font-family: inherit;
 		}
